# xproc

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .mailmap  API_NAMING_CHANGES.md  BUILD  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  INSTALL  INSTALL.md  README.md  SECURITY.md  error  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml  node-package-publish.yml  python-publish.yml  python-wheels.yml
Python/: CMakeLists.txt  README.md
Python/examples/: _common.py  cpp_python_handshake_worker.py  fixed_channel_inprocess.py  observer_peek_demo.py  parent_child_struct_monitor.py  python_parent_cpp_child_struct_monitor.py  varlen_channel_inprocess.py
Python/src/: python_binding.cpp
Python/tests/: smoke_test.py
Python/xproc/: __init__.py  __init__.pyi
benchmarks/: CMakeLists.txt  ipc_benchmark.cpp  ipc_cross_framework_benchmark.cpp  ipc_observer_benchmark.cpp  ipc_poll_copy_benchmark.cpp  ringbuffer_benchmark.cpp  runtime_benchmark.cpp  shm_layout_benchmark.cpp  sync_benchmark.cpp
capi/: CMakeLists.txt  xproc_c.cpp  xproc_c.h
cmake/: xproc.pc.in  xprocConfig.cmake.in
csharp/: README.md  XprocSharp.sln
csharp/XprocSharp/: Consumer.cs  Observer.cs  Producer.cs  ShmChannelEndpoints.cs  TransportOptions.cs  Xproc.cs  XprocBackend.cs  XprocChannelType.cs  XprocEndpointKind.cs  XprocException.cs  XprocLayoutError.cs  XprocSharp.csproj  XprocShm.cs  XprocSnapshot.cs  XprocStatus.cs
csharp/XprocSharp/Internal/: ConsumerSafeHandle.cs  NativeLibraryBootstrapper.cs  NativeMethods.cs  NativeOptionsScope.cs  ObserverSafeHandle.cs  ProducerSafeHandle.cs
csharp/benchmarks/: README.md
csharp/benchmarks/IpcTransportComparison/: BenchmarkModels.cs  BenchmarkRunner.cs  ITransportBenchmark.cs  IpcTransportComparison.csproj  Program.cs  TransportBenchmarks.cs
csharp/examples/: README.md
csharp/examples/FixedChannelInProcess/: Program.cs
csharp/examples/ObserverPeekDemo/: Program.cs
csharp/examples/PingPong/: PingPong.csproj  Program.cs
csharp/examples/VarlenChannelInProcess/: Program.cs
docs/: advanced.rst  architecture.rst  benchmark.rst  building.rst  conf.py  design.md  design.rst  index.rst  overview.rst  platforms.rst  quickstart.rst  todo.md
docs/_generated/: ipc_benchmark_table.rst  sync_win32_wait_table.rst
docs/superpowers/audits/: 2026-04-24-channel-manifest-phase-1-audit.md
docs/superpowers/plans/: 2026-04-24-channel-manifest-phase-1-analysis.md  2026-04-25-channel-manifest-follow-up-execution-plan.md  2026-04-25-channel-manifest-phase-1-binding-hardening.md  2026-04-25-creator-metadata-manifest-implementation-plan.md  2026-04-26-node-api-npm-publishing-plan.md  2026-05-15-rust-binding.md  2026-05-20-python-binding-wheel-packaging.md  2026-05-28-phase2-runtime-allocation.md  2026-05-28-producer-backpressure.md  2026-05-29-socket-builder-api.md  2026-05-29-socket-disconnect-reconnect-resilience.md  2026-05-30-socket-test-coverage-gap-fill.md
docs/superpowers/reference/: 2026-05-28-phase2-reference-design.md
docs/superpowers/reviews/: 2026-04-24-channel-manifest-phase-1-phase1-assessment.md  2026-04-25-channel-manifest-phase-1-closeout-status.md
docs/superpowers/specs/: 2026-04-24-channel-manifest-phase-1-analysis-design.md  2026-04-25-channel-manifest-phase-1-next-steps-design.md  2026-04-25-creator-metadata-manifest-design.md  2026-04-26-node-api-npm-publishing-design.md  2026-05-15-rust-binding-design.md  2026-05-20-python-binding-wheel-packaging-design.md  2026-05-28-phase2-runtime-allocation-design.md  2026-05-28-producer-backpressure-design.md  2026-05-29-socket-builder-api-design.md  2026-05-29-socket-disconnect-reconnect-resilience-design.md  2026-05-30-socket-test-coverage-gap-fill-design.md
examples/: CMakeLists.txt  README.md  codec_roundtrip_demo.cpp  cpp_python_handshake_progress.cpp  fixed_channel_inprocess.cpp  handshake_launcher_demo.cpp  ipc_taskflow_pipeline_demo.cpp  ipc_taskflow_runtime_demo.cpp  mpmc_inprocess_bridge_demo.cpp  mpmc_worker_pool_demo.cpp  mpsc_fan_in_demo.cpp  mpsc_log_hub_demo.cpp  node_cpp_child_struct_writer.cpp  observer_peek_demo.cpp  parent_child_counter_monitor.cpp  parent_child_struct_monitor.cpp  parent_child_varlen_monitor.cpp  ping_pong.cpp  process.hpp  runtime_dispatch_demo.cpp  socket_varlen_reconnect_demo.cpp  spmc_config_broadcast_demo.cpp  spmc_fan_out_demo.cpp  varlen_channel_inprocess.cpp
include/xproc/: xproc.hpp
include/xproc/core/: layout_exception.hpp  shm.hpp  shm_backend.hpp  shm_layout.hpp  shm_layout_manager.hpp  shm_open_mode.hpp
node/: .gitignore  CMakeLists.txt  README.md  globals.d.ts  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.json  xproc-types.d.ts
node/examples/: fixed_channel_inprocess.ts  node_parent_cpp_child_struct_monitor.ts  observer_peek_demo.ts  parent_child_struct_monitor.ts  socket_fixed_loopback.ts  socket_varlen_loopback.ts  varlen_channel_inprocess.ts
node/lib/: load-native.js
node/scripts/: assert-packlist.js  stage-prebuild.js  verify-packed-install.js
node/src/: node_binding.cpp
node/test/: high_level_shm.test.ts  high_level_socket.test.ts  smoke.test.ts
proto/: test_point.proto
rust/: Cargo.toml
rust/xproc/: Cargo.toml  build.rs
rust/xproc-sys/: Cargo.toml  build.rs
src/: CMakeLists.txt
src/core/: shm_layout_manager.cpp  shm_posix.cpp  shm_win32.cpp
src/ipc/: channel_interface.cpp  ipc_channel_interface.cpp  socket_channel.cpp
src/shm/: shm.cpp  shm_layout_manager.cpp  shm_posix.cpp  shm_win32.cpp
tests/: CMakeLists.txt  api_surface_test.cpp  capi_smoke_test.cpp  ipc_integration_test.cpp  ipc_observer_attach_test.cpp  layout_validate_test.cpp  optional_serde_test.cpp  producer_backpressure_test.cpp  protocol_codec_test.cpp  python_wheel_smoke.py  ringbuffer_full_ring_test.cpp  ringbuffer_spsc_test.cpp  runtime_allocation_test.cpp  socket_transport_test.cpp  win32_wait_shm_test.cpp
tools/: generate_ipc_benchmark_table.py  generate_sync_wait_benchmark_table.py
(+59 files in other folders)
